working on simplifying

--- a/index.html
+++ b/index.html
@@ -3,35 +3,43 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>A U.S. National Parks Quiz</title>
+    <title>U.S. National Parks Quiz</title>
     <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 
 <body>
     <div id="wrapper">
         <div id="header">
-            <h1>Welcome To A U.S. National Parks Quiz</h1>
+            <h1>U.S. National Parks Quiz</h1>
         </div>
-        <section id="maparea">
-
+        <!--<section id="maparea">
+            <img title="This is my tooltip" id="california" class="state" src="images/california.png">
+            <img id="hawaii" class="state" src="images/hawaii.png">
+            <img id="sdakot" class="state" src="images/south-dakota.png">
+            <img id="utah" class="state" src="images/utah.png">
+            <img id="arkansas" class="state" src="images/arkansas.png">
+            <img id="washington" class="state" src="images/washington.png">
+            <img id="montana" class="state" src="images/montana.png">
+            <img id="maine" class="state" src="images/maine.png">-->
         </section>
-    </div>
-    <section id="questionbox">
-        <p>Score: 100</p>
+        <section id="questionbox">
+        <p id="score">Score: 100</p>
         <ul id="questionlist">
             <li>Question #1: In which state is the Sequuoia National Park?</li>
             <!--<li>Question #2: In which state is the Arches National Park?</li>
-            <li>Question #3: In which state is the Haleakala National Park?</li>
-            <li>Question #4: In which state is the Badlands National Park?</li>
-            <li>Question #5: In which state is the Hot Springs National Park?</li>
-            <li>Question #6: In which state is the Mount Rainier National Park?</li>
-            <li>Question #7: In which state is the Bryce Canyon National Park?</li>
-            <li>Question #8: In which state is the Joshua Tree National Park?</li>
-            <li>Question #9: In which state is the Acadia National Park?</li>
-            <li>Question #10: In which state is the Glacier National Park?</li>-->
+                <li>Question #3: In which state is the Haleakala National Park?</li>
+                <li>Question #4: In which state is the Badlands National Park?</li>
+                <li>Question #5: In which state is the Hot Springs National Park?</li>
+                <li>Question #6: In which state is the Mount Rainier National Park?</li>
+                <li>Question #7: In which state is the Bryce Canyon National Park?</li>
+                <li>Question #8: In which state is the Joshua Tree National Park?</li>
+                <li>Question #9: In which state is the Acadia National Park?</li>
+                <li>Question #10: In which state is the Glacier National Park?</li>-->
         </ul>
-        <p>5 questions left</p>
-    </section>
+        <p id="questioncount">5 questions left</p>
+        </section>
+    </div>
+    
     <section class="learnmore">
         <h2>Find Out More About Your Parks</h2>
         <ul id="moretrio">
