trying to get question/scores aligned

--- a/index.html
+++ b/index.html
@@ -22,38 +22,40 @@
             <img id="montana" class="state" src="images/montana.png">
             <img id="maine" class="state" src="images/maine.png">-->
         </section>
-        <section id="questionbox">
-        <p id="score">Score: 100</p>
-        <ul id="questionlist">
-            <li>Question #1: In which state is the Sequuoia National Park?</li>
-            <!--<li>Question #2: In which state is the Arches National Park?</li>
+        
+    </div>
+    <section id="questionbox">
+        <div>
+            <ul id="statsquestionslist">
+                <li id="score">Score: 100</li>
+                <li>Question #1: In which state is the Sequuoia National Park?</li>
+                <!--<li>Question #2: In which state is the Arches National Park?</li>
                 <li>Question #3: In which state is the Haleakala National Park?</li>
-                <li>Question #4: In which state is the Badlands National Park?</li>
                 <li>Question #5: In which state is the Hot Springs National Park?</li>
                 <li>Question #6: In which state is the Mount Rainier National Park?</li>
                 <li>Question #7: In which state is the Bryce Canyon National Park?</li>
                 <li>Question #8: In which state is the Joshua Tree National Park?</li>
                 <li>Question #9: In which state is the Acadia National Park?</li>
                 <li>Question #10: In which state is the Glacier National Park?</li>-->
-        </ul>
-        <p id="questioncount">5 questions left</p>
-        </section>
-    </div>
-    
-    <section class="learnmore">
+                <li id="questioncount">5 questions left</li>
+            </ul>
+        </div>
+    </section>
+    <!--<section class="learnmore">
         <h2>Find Out More About Your Parks</h2>
         <ul id="moretrio">
             <li>The Parks Website</li>
             <li>Park Videos From Around The Internet</li>
             <li>The National Park Service Website</li>
         </ul>
-    </section>
+    </section>-->
     <footer>
         <ul class="">
             <li>Made by Me</li>
             <li>Send Mail</li>
             <li>Something Awesome</li>
         </ul>
+    </footer>
 
 	<script src="http://code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
