layout is coming along

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
         
     </div>
     <section id="questionbox">
-        <div>
             <ul id="statsquestionslist">
                 <li id="score">Score: 100</li>
                 <li>Question #1: In which state is the Sequuoia National Park?</li>
@@ -39,7 +38,9 @@
                 <li>Question #10: In which state is the Glacier National Park?</li>-->
                 <li id="questioncount">5 questions left</li>
             </ul>
-        </div>
+    </section>
+    <section id="choices">
+        
     </section>
     <!--<section class="learnmore">
         <h2>Find Out More About Your Parks</h2>
@@ -50,7 +51,7 @@
         </ul>
     </section>-->
     <footer>
-        <ul class="">
+        <ul class="mefooter">
             <li>Made by Me</li>
             <li>Send Mail</li>
             <li>Something Awesome</li>
