added multiple choices

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section id="questionbox">
             <ul id="statsquestionslist">
                 <li id="score">Score: 100</li>
-                <li>Question #1: In which state is the Sequuoia National Park?</li>
+                <li>Question #1: In which state is the Sequoia National Park?</li>
                 <!--<li>Question #2: In which state is the Arches National Park?</li>
                 <li>Question #3: In which state is the Haleakala National Park?</li>
                 <li>Question #5: In which state is the Hot Springs National Park?</li>
@@ -40,7 +40,19 @@
             </ul>
     </section>
     <section id="choices">
-        
+        <div id="choice1">
+            Choice One
+        </div>
+        <div id="choice2">
+            Choice Two
+        </div>
+        <div id="choice3">
+            Choice Three
+        </div>
+        <div id="choice4">
+            Choice Four
+        </div>
+
     </section>
     <!--<section class="learnmore">
         <h2>Find Out More About Your Parks</h2>
