--- a/index.html
+++ b/index.html
@@ -41,16 +41,17 @@
     </section>
     <section id="choices">
         <div id="choice1">
-            Choice One
+            <span>Washington</span>
+            <!--<img title="This is my tooltip" id="california" class="state" src="images/california.png">-->
         </div>
         <div id="choice2">
-            Choice Two
+            <span>Hawaii</span>
         </div>
         <div id="choice3">
-            Choice Three
+            <span>California</span>
         </div>
         <div id="choice4">
-            Choice Four
+            <span>Montana</span>
         </div>
 
     </section>
