Begin game working

--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
             </ul>
     </section>
     <section id="choices">
+        <!--<div>
+            <span class="instructions">Click on a state, then submit:</span>
+        </div>-->
+        <div id="clicktobegin">
+            <span>Click To Begin</span>
+        </div>
         <div id="choice1">
             <span>Washington</span>
             <!--<img title="This is my tooltip" id="california" class="state" src="images/california.png">-->
@@ -52,6 +58,9 @@
         </div>
         <div id="choice4">
             <span>Montana</span>
+        </div>
+        <div id="submitdiv">
+            <button><span>Submit Answer</span></button>
         </div>
 
     </section>
