--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </ul>
     </footer>
 
-	<script src="http://code.jquery.com/jquery.min.js"></script>
+	<script src="https://code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
