reworked html structure a little

--- a/index.html
+++ b/index.html
@@ -25,19 +25,11 @@
         
     </div>
     <section id="questionbox">
-            <ul id="statsquestionslist">
-                <li id="score">Score: 100</li>
-                <li>Question #1: In which state is the Sequoia National Park?</li>
-                <!--<li>Question #2: In which state is the Arches National Park?</li>
-                <li>Question #3: In which state is the Haleakala National Park?</li>
-                <li>Question #5: In which state is the Hot Springs National Park?</li>
-                <li>Question #6: In which state is the Mount Rainier National Park?</li>
-                <li>Question #7: In which state is the Bryce Canyon National Park?</li>
-                <li>Question #8: In which state is the Joshua Tree National Park?</li>
-                <li>Question #9: In which state is the Acadia National Park?</li>
-                <li>Question #10: In which state is the Glacier National Park?</li>-->
-                <li id="questioncount">5 questions left</li>
-            </ul>
+            <div id="questiontext">
+                <span>Score: <span id="score">100</span></span>
+                <span>Question #1: In which state is the Sequoia National Park?</span>
+                <span id="questioncount">5 questions left</span>
+            </div>
     </section>
     <section id="choices">
         <!--<div>
