questions and answer populating from array

--- a/index.html
+++ b/index.html
@@ -39,22 +39,10 @@
             <span>Click To Begin</span>
         </div>
         <ul id="multiplechoices">
-            <li>
-                Washington
-            </li>
-            <li>
-                <span>Hawaii</span>
-            </li>
-            <li id="choice3">
-                <span>California</span>
-            </li>
-            <li id="choice4">
-                <span>Montana</span>
-            </li>
         </ul>
-        <div id="submitdiv">
+        <!--<div id="submitdiv">
             <button><span>Submit Answer</span></button>
-        </div>
+        </div>-->
 
     </section>
     <!--<section class="learnmore">
