--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <section id="statsbox">
             <div id="statsboxinfo">
-                <span>Score: <span id="score">100</span></span>
+                <span>Score: <span id="score"></span></span>
                 <span id="questiontext">Question #1: In which state is the Sequoia National Park?</span>
                 <span id="questioncount">5 questions left</span>
             </div>
