counting score and questions left is working

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div id="statsboxinfo">
                 <span>Score: <span id="score"></span></span>
                 <span id="questiontext">Question #1: In which state is the Sequoia National Park?</span>
-                <span id="questioncount">5 questions left</span>
+                <span id="questioncount"></span> <span> questions left</span>
             </div>
     </section>
     <section id="choices">
