correct/incorrect feedback working

--- a/index.html
+++ b/index.html
@@ -12,17 +12,12 @@
         <div id="header">
             <h1>U.S. National Parks Quiz</h1>
         </div>
-        <!--<section id="maparea">
-            <img title="This is my tooltip" id="california" class="state" src="images/california.png">
-            <img id="hawaii" class="state" src="images/hawaii.png">
-            <img id="sdakot" class="state" src="images/south-dakota.png">
-            <img id="utah" class="state" src="images/utah.png">
-            <img id="arkansas" class="state" src="images/arkansas.png">
-            <img id="washington" class="state" src="images/washington.png">
-            <img id="montana" class="state" src="images/montana.png">
-            <img id="maine" class="state" src="images/maine.png">-->
-        </section>
-        
+        <div id="overlaycorrect">
+            <h2>Correct!</h2>
+        </div>
+        <div id="overlayincorrect">
+            <h2>Incorrect!</h2>
+        </div>
     </div>
     <section id="statsbox">
             <div id="statsboxinfo">
@@ -43,16 +38,7 @@
         <!--<div id="submitdiv">
             <button><span>Submit Answer</span></button>
         </div>-->
-
     </section>
-    <!--<section class="learnmore">
-        <h2>Find Out More About Your Parks</h2>
-        <ul id="moretrio">
-            <li>The Parks Website</li>
-            <li>Park Videos From Around The Internet</li>
-            <li>The National Park Service Website</li>
-        </ul>
-    </section>-->
     <footer>
         <ul class="mefooter">
             <li>Made by Me</li>
