end condition works but needs to be tuned.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <div id="overlayincorrect">
             <h2>Incorrect!</h2>
         </div>
+        <div id="overlayscore">
+            <h2>Your Final Score: <span id="score"></span></h2>
+        </div>
     </div>
     <section id="statsbox">
             <div id="statsboxinfo">
