fixed number counters

--- a/index.html
+++ b/index.html
@@ -19,28 +19,25 @@
             <h2>Incorrect!</h2>
         </div>
         <div id="overlayscore">
-            <h2>Your Final Score: <span id="score"></span></h2>
+            <h2>Your Final Score: <span id="finalscore"></span></h2>
         </div>
     </div>
     <section id="statsbox">
             <div id="statsboxinfo">
-                <span>Score: <span id="score"></span></span>
-                <span id="questiontext">Question #1: In which state is the Sequoia National Park?</span>
-                <span id="questioncount"></span> <span> questions left</span>
+                <span id="score"></span>
+                <span id="questiontext"></span>
+                <span id="questioncount"></span>
             </div>
     </section>
     <section id="choices">
-        <!--<div>
-            <span class="instructions">Click on a state, then submit:</span>
-        </div>-->
         <div id="clicktobegin">
             <span>Click To Begin</span>
         </div>
+        <div id="newgame">
+            <span>Play Again</span>
+        </div>
         <ul id="multiplechoices">
         </ul>
-        <!--<div id="submitdiv">
-            <button><span>Submit Answer</span></button>
-        </div>-->
     </section>
     <footer>
         <ul class="mefooter">
