--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <div>
     <div id="wrapper">
         <div id="header">
             <h1>U.S. National Parks Quiz</h1>
@@ -22,13 +23,11 @@
             <h2>Your Final Score: <span id="finalscore"></span></h2>
         </div>
     </div>
-    <section id="statsbox">
             <div id="statsboxinfo">
-                <span id="score"></span>
-                <span id="questiontext"></span>
-                <span id="questioncount"></span>
+                <section id="score"></section>
+                <section id="questiontext"></section>
+                <section id="questioncount"></section>
             </div>
-    </section>
     <section id="choices">
         <div id="clicktobegin">
             <span>Click To Begin</span>
@@ -40,14 +39,13 @@
         </ul>
     </section>
     <footer>
-        <ul class="mefooter">
-            <li>Made by Me</li>
-            <li>Send Mail</li>
-            <li>Something Awesome</li>
+        <ul class="smallfooter">
+            <li><a href="mailto:mithgirw@gmail.com">Get in touch with me</a></li>
         </ul>
     </footer>
 
 	<script src="https://code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
+    </div>
 </body>
 </html>
