--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>U.S. National Parks Quiz</title>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 
@@ -40,7 +41,9 @@
     </section>
     <footer>
         <ul class="smallfooter">
-            <li><a href="mailto:mithgirw@gmail.com">Get in touch with me</a></li>
+            <li>Made by Tim Wright</li>
+            <i class="fa fa-code fa-2x" aria-hidden="true"></i>
+            <li>Find out more <a href="http://thepixeluprising.com">here</a></li>
         </ul>
     </footer>
 
