--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <div>
         <div class="wrapper">
             <div class="header">
+                <span class="score"></span>
                 <h1>U.S. National Parks Quiz</h1>
+                <span class="questioncount"></span>
             </div>
             <div class="overlaycorrect">
                 <h2>Correct!</h2>
@@ -24,9 +26,9 @@
             </div>
         </div>
         <div class="statsboxinfo">
-            <section class="score"></section>
+            <!--<span class="score"></span>-->
             <section class="questiontext"></section>
-            <section class="questioncount"></section>
+            <!--<span class="questioncount"></span>-->
         </div>
         <section class="choices">
             <div class="progress_wrap">
