--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
         <div class="wrapper">
             <div class="header">
                 <span class="score"></span>
-                <h1>U.S. National Parks Quiz</h1>
                 <span class="questioncount"></span>
+                <div class="title"><h1>U.S. National Parks Quiz</h1></div>
+                
             </div>
             <div class="overlaycorrect">
                 <h2>Correct!</h2>
@@ -35,12 +36,8 @@
                 <div class="progress_bar">
                 </div>
             </div>
-            <div class="clicktobegin">
-                <span>Click To Begin</span>
-            </div>
-            <div class="newgame">
-                <span>Play Again</span>
-            </div>
+            <button class="clicktobegin">Click To Begin</button>
+            <button class="newgame">Play Again</button>
             <ul class="multiplechoices">
             </ul>
         </section>
@@ -52,7 +49,7 @@
             </ul>
         </footer>
 
-        <script src="https://code.jquery.com/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="js/app.js"></script>
     </div>
 </body>
