--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             </div>
             <button class="clicktobegin">Click To Begin</button>
             <button class="newgame">Play Again</button>
-            <ul class="multiplechoices">
-            </ul>
+            <div class="multiplechoices">
+            </div>
         </section>
         <footer>
             <ul class="smallfooter">
