--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
     <div>
         <div class="wrapper">
             <div class="header">
-                <span class="score"></span>
-                <span class="questioncount"></span>
                 <div class="title"><h1>U.S. National Parks Quiz</h1></div>
-                
             </div>
+            
             <div class="overlaycorrect">
                 <h2>Correct!</h2>
             </div>
@@ -24,6 +22,10 @@
             </div>
             <div class="overlayscore">
                 <h2>Your Final Score: <span class="finalscore"></span></h2>
+            </div>
+            <div class="score_question">
+                <span class="score"></span>
+                <span class="questioncount"></span>
             </div>
         </div>
         <div class="statsboxinfo">
