fixed positions for feedback and stats

--- a/index.html
+++ b/index.html
@@ -23,15 +23,13 @@
             <div class="overlayscore">
                 <h2>Your Final Score: <span class="finalscore"></span></h2>
             </div>
-            <div class="score_question">
-                <span class="score"></span>
-                <span class="questioncount"></span>
-            </div>
+        </div>
+        <div class="score_question">
+            <span class="questioncount"></span>
+            <span class="score"></span>
         </div>
         <div class="statsboxinfo">
-            <!--<span class="score"></span>-->
             <section class="questiontext"></section>
-            <!--<span class="questioncount"></span>-->
         </div>
         <section class="choices">
             <div class="progress_wrap">
@@ -46,11 +44,10 @@
         <footer>
             <ul class="smallfooter">
                 <li>Made by Tim Wright</li>
-                <i class="fa fa-code fa-2x" aria-hidden="true"></i>
+                <li><i class="fa fa-code fa-2x" aria-hidden="true"></i></li>
                 <li>Find out more <a href="http://thepixeluprising.com">here</a></li>
             </ul>
         </footer>
-
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="js/app.js"></script>
     </div>
