--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <ul class="smallfooter">
                 <li>Made by Tim Wright</li>
                 <li><i class="fa fa-code fa-2x" aria-hidden="true"></i></li>
-                <li>Find out more <a href="http://thepixeluprising.com">here</a></li>
+                <li>Me on <a href="https://www.linkedin.com/in/tim-wright">LinkedIn</a></li>
             </ul>
         </footer>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
