--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>U.S. National Parks Quiz</title>
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Playfair+Display" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
@@ -11,7 +12,8 @@
     <div>
         <div class="wrapper">
             <div class="header">
-                <div class="title"><h1>U.S. National Parks Quiz</h1></div>
+                <h1>National Parks Quiz</h1>
+                <button class="clicktobegin">Click To Begin</button>
             </div>
             
             <div class="overlaycorrect">
@@ -36,17 +38,16 @@
                 <div class="progress_bar">
                 </div>
             </div>
-            <button class="clicktobegin">Click To Begin</button>
+            
             <button class="newgame">Play Again</button>
             <div class="multiplechoices">
             </div>
         </section>
         <footer>
-            <ul class="smallfooter">
+            <!--<ul class="smallfooter">
                 <li>Made by Tim Wright</li>
                 <li><i class="fa fa-code fa-2x" aria-hidden="true"></i></li>
-                <li>Me on <a href="https://www.linkedin.com/in/tim-wright">LinkedIn</a></li>
-            </ul>
+            </ul>-->
         </footer>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="js/app.js"></script>
