--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>U.S. National Parks Quiz</title>
+    <title>U.S. National Parks Quiz</title><link href="https://fonts.googleapis.com/css?family=Amatic+SC|Jacques+Francois|Playfair+Display|Quicksand" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Playfair+Display" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles/style.css">
@@ -12,7 +12,7 @@
     <div>
         <div class="wrapper">
             <div class="header">
-                <h1>National Parks Quiz</h1>
+                <h1>NATIONAL PARKS QUIZ</h1>
                 <button class="clicktobegin">Click To Begin</button>
             </div>
             
