updating look and ui

--- a/index.html
+++ b/index.html
@@ -1,56 +1,61 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>U.S. National Parks Quiz</title><link href="https://fonts.googleapis.com/css?family=Amatic+SC|Jacques+Francois|Playfair+Display|Quicksand" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Playfair+Display" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>U.S. National Parks Quiz</title>
+	<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Jacques+Francois|Playfair+Display|Quicksand"
+		rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Playfair+Display" rel="stylesheet">
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
+
 <body>
-    <div>
-        <div class="wrapper">
-            <div class="header">
-                <h1>NATIONAL PARKS QUIZ</h1>
-                <button class="clicktobegin">Click To Begin</button>
-            </div>
-            
-            <div class="overlaycorrect">
-                <h2>Correct!</h2>
-            </div>
-            <div class="overlayincorrect">
-                <h2>Incorrect!</h2>
-            </div>
-            <div class="overlayscore">
-                <h2>Your Final Score: <span class="finalscore"></span></h2>
-            </div>
-        </div>
-        <div class="score_question">
-            <span class="questioncount"></span>
-            <span class="score"></span>
-        </div>
-        <div class="statsboxinfo">
-            <section class="questiontext"></section>
-        </div>
-        <section class="choices">
-            <div class="progress_wrap">
-                <div class="progress_bar">
-                </div>
-            </div>
-            
-            <button class="newgame">Play Again</button>
-            <div class="multiplechoices">
-            </div>
-        </section>
-        <footer>
-            <!--<ul class="smallfooter">
+	<div class="wrapper">
+		<div class="header">
+			<h1>NATIONAL PARKS QUIZ</h1>
+			<button class="clicktobegin">Click To Begin</button>
+		</div>
+		<div class="overlaycorrect">
+			<h2>Correct!</h2>
+		</div>
+		<div class="overlayincorrect">
+			<h2>Incorrect!</h2>
+		</div>
+		<div class="overlayscore">
+			<h2>Your Final Score: <span class="finalscore"></span></h2>
+		</div>
+	</div>
+	<div class="ui_data">
+		<div class="statsboxinfo">
+			<section class="questiontext"></section>
+		</div>
+		<section class="choices">
+			<div class="progress_wrap">
+				<div class="progress_bar">
+				</div>
+			</div>
+			
+
+			<button class="newgame">Play Again</button>
+			<div class="multiplechoices">
+			</div>
+            <!--<div class="score_question">
+				<span class="questioncount"></span>
+				<span class="score"></span>
+			</div>-->
+		</section>
+	</div>
+	<footer>
+		<!--<ul class="smallfooter">
                 <li>Made by Tim Wright</li>
                 <li><i class="fa fa-code fa-2x" aria-hidden="true"></i></li>
             </ul>-->
-        </footer>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-        <script src="js/app.js"></script>
-    </div>
+	</footer>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="js/app.js"></script>
 </body>
+
 </html>
