--- a/index.html
+++ b/index.html
@@ -49,10 +49,8 @@
 		</section>
 	</div>
 	<footer>
-		<!--<ul class="smallfooter">
-                <li>Made by Tim Wright</li>
-                <li><i class="fa fa-code fa-2x" aria-hidden="true"></i></li>
-            </ul>-->
+        <span>Made by Tim Wright</span>
+        <a target="_blank" href="https://linkedin.com/in/tim-wright"><i class="fa_light fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
 	</footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="js/app.js"></script>
