fixing background fixed problem on mobile

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div class="wrapper">
 		<div class="header">
 			<h1>NATIONAL PARKS QUIZ</h1>
-			<button class="clicktobegin">Click To Begin</button>
+			<button class="clicktobegin">Begin</button>
 		</div>
 		<div class="overlaycorrect">
 			<h2>Correct!</h2>
